# SecureCode_Scanner

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  utils.py  vercel.json
static/: style.css
templates/: index.html  login.html  signup.html
