[project]
name = "llm-source-code-scanner"
version = "0.1.0"
description = "LLM-powered source code vulnerability scanner using Llama 3.3 70B Instruct"
requires-python = ">=3.10"

dependencies = [
    "flask",
    "flask-wtf",
    "flask-limiter",
    "flask-talisman",
    "bleach",
    "requests",
    "werkzeug"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
